K8S/events-depl.yaml
apiVersion: apps/v1 #what version of the api it is
kind: Deployment
metadata:
  name: events-depl
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: eventsservice #select what we deploy
  template:
    metadata:
      labels:
        app: eventsservice #define what we deploy
    spec:
      containers: 
      - name: eventsservice
        image: jcheng710/eventsservice:latest
--- #the internal ip for the service
apiVersion: v1 #what version of the api it is
kind: Service
metadata:
  name: events-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: eventsservice
  ports:
  - name: eventsservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: platformgrpc
    protocol: TCP
    port: 666
    targetPort: 666
