K8S/finance-depl.yaml
apiVersion: apps/v1 #what version of the api it is
kind: Deployment
metadata:
  name: finances-depl
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: financeservice #select what we deploy
  template:
    metadata:
      labels:
        app: financeservice #define what we deploy
    spec:
      containers: 
      - name: financeservice
        image: jcheng710/financeservice:latest
---
apiVersion: v1 #service providing cluster IP to the services (how they talk to each other)
kind: Service
metadata:
  name: finance-clusterip-service #effectively the endpoint to reach out to
spec:
  type: ClusterIP
  selector:
    app: financeservice
  ports:
  - name: financeservice
    protocol: TCP
    port: 80
    targetPort: 80
