K8S/platforms-depl.yaml
apiVersion: apps/v1 #what version of the api it is
kind: Deployment
metadata:
  name: platforms-depl
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: platformservice #select what we deploy
  template:
    metadata:
      labels:
        app: platformservice #define what we deploy
    spec:
      containers: 
      - name: platformservice
        image: jcheng710/platformservice:latest
--- #the internal ip for the service
apiVersion: v1 #what version of the api it is
kind: Service
metadata:
  name: platforms-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: platformgrpc
    protocol: TCP
    port: 666
    targetPort: 666
