K8S/ingress-srv.yaml
#routing file for the nginx service to direct traffic to our pods
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec: #rules of routing
  rules: 
    - host: acme.com #need to update localhost file to show this directing to local address
      http: 
        paths:
          - path: /api/events
            pathType: Prefix
            backend: 
              service: 
                name: events-clusterip-service
                port: 
                  number: 80
          - path: /api/c/payments
            pathType: Prefix
            backend: 
              service: 
                name: finance-clusterip-service
                port: 
                  number: 80
